# photo-archivist

./: .gitignore  AGENTS.md  NOTES.md  README.md  archive.py  archive_runner.py  describe.py  embed.py  faces.py  faceui.py  mlflow_experiment.py  mlx_mlflow_experiment.py  model_eval.py  open_original.py  pyproject.toml  reviewui.py  sidecar.py  store.py  webui.py
eval/: model_quality_feedback_template.csv  model_quality_feedback_template.json  model_quality_images.txt  model_quality_rubric.md
scripts/gcp/: create_eval_vlm_vm.sh  delete_eval_vlm_vm.sh  make_goldens.py
sources/: __init__.py  apple_photos.py  onedrive.py
src/photo_archivist/: archive_runner.py  cli.py  describe.py  embed.py  evaluation.py  geocode.py  metadata.py  ollama_ctl.py  search.py  sidecar.py
src/photo_archivist/experiments/: mlflow_experiment.py
src/photo_archivist/sources/: __init__.py  base.py  onedrive.py
src/photo_archivist/web/: app.py
templates/: grid.html
tests/: test_apple_photos.py  test_backfill_embeddings.py  test_describe.py  test_embed.py  test_embed_subprocess.py  test_evaluation.py  test_faceui.py  test_framedex_sidecar.py  test_metadata_geocode_faces.py  test_mlflow_experiment.py  test_mlx_mlflow_experiment.py  test_model_eval.py  test_ollama_ctl.py  test_open_original.py  test_reviewui.py  test_search.py  test_sidecar.py  test_source_selection.py  test_structure.py  test_structured.py  test_webui.py
