[project]
name = "photo-archivist"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "fastapi>=0.115.0",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "insightface>=1.0.1",
    "jinja2>=3.1.0",
    "numpy>=2.0.0",
    "mlx-vlm>=0.5.0",
    "onnxruntime>=1.24.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.1.1",
    "pytest>=9.0.3",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.6.0",
    "sqlite-utils>=3.39",
    "transformers>=4.50.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
photo-archivist = "archive:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["archive", "describe", "embed", "store", "sidecar", "open_original", "metadata", "geocode", "faces", "faceui", "ollama_ctl", "model_eval"]
packages = ["sources"]
